<resources>
    <string name="app_name" translatable="false">MyYadoms</string>
    <string name="app_version" translatable="false">v%s%s</string>
    <string name="action_settings">Settings</string>
    <string name="action_away_from_home_settings">Away from home settings</string>

    <!-- Preference Titles -->
    <string name="preferences_server_connection">Server connexion</string>
    <string name="preferences_display">Display</string>

    <!-- Server connexion com.yadoms.myyadoms.preferences.Preferences -->
    <string name="preference_server_url">Server URL</string>
    <string name="preference_server_port">Server port</string>
    <string name="preference_server_use_basic_authentication">Use basic authentication</string>
    <string name="preference_server_basic_authentication_username">User name</string>
    <string name="preference_server_basic_authentication_password">Password</string>
    <string name="preference_server_use_https">Use HTTPS</string>
    <string name="preference_server_https_port">Server HTTPS port</string>
    <string name="preference_ignore_https_certificate_error">Ignore certificate errors</string>
    <string name="accessibility_widget_logo">Widget Logo</string>
    <string name="select_widget_type">Select the widget</string>
    <string name="select_device">Select the device</string>
    <string name="select_keyword">Select the keyword to display</string>
    <string name="add_a_widget">Add a widget</string>
    <string name="last_update">Last update : %s</string>
    <string name="widget_deleted">Widget deleted</string>
    <string name="undo">Undo</string>
    <string name="unable_to_reach_the_server">Unable to reach the server</string>
    <string name="finish">Finish</string>
    <string name="add_new_widget">Add new widget</string>
    <string name="default_widget_name">%s of %s</string>

    <!-- Switch -->
    <string name="switch_name">Switch</string>
    <string name="switch_description">A widget to drive ON/OFF devices</string>

    <!-- Numeric -->
    <string name="numeric_name">Numeric display</string>
    <string name="numeric_description">A widget to display numeric data</string>
    <string name="no_widget_available">No widget available, click on \'+\' to add one</string>
    <string name="no_server_configuration">No Yadoms server available, please configure one</string>
    <string name="settings">Settings</string>
    <string name="preference_display_last_update_as_duration">Duration</string>
    <string name="preference_display_last_update_mode">Widget last update</string>
    <string name="preference_display_last_update_as_time">Date / Time</string>
    <string name="just_now">just now</string>
    <string name="x_minutes">%d minutes</string>
    <string name="x_hours">%d hours</string>
    <string name="more_than_one_day">More than one day</string>
    <string name="action_about">About</string>
    <string name="yadoms_logo">Yadoms logo</string>
    <string name="yadoms_url" translatable="false">https://yadoms.com/</string>
    <string name="away_from_home_action">Away from home action</string>
    <string name="this_function_requires_location">This function requires location</string>
    <string name="unable_to_retrieve_location">Unable to retrieve current location</string>
    <string name="location_select_data">Select data</string>
    <string name="select_keyword_to_drive">Select the data to drive</string>
    <string name="no_data">No data</string>
    <string name="away_from_home_explanations">The \'away from home\' function allows you to carry out certain tasks when you leave or return home.\nDefine a reference location, and a data item to be positioned when you leave or approach this location.</string>
    <string name="when">When</string>
    <string name="reference_location">Reference location</string>
    <string name="undefined_location">Undefined (click to select current location)</string>
    <string name="defined_location">Lat : %1s - Long : %2s</string>
    <string name="distance">Distance</string>
    <string name="distance_help">The action will be triggered at this distance from the reference position.</string>
    <string name="device_to_control">Device to control</string>
    <string name="undefined_device">Undefined device</string>
    <string name="away_from_home_location_explanations">Define here the location condition firing the event</string>
    <string name="away_from_home_action_explanations">Define here the action to execute when condition above is meet</string>
    <string name="away_from_home_enable">Enable/disable Away From Home</string>
    <string name="preferences_away_from_home_function">Away from home function</string>
    <string name="condition">Condition</string>
    <string name="action">Action</string>
    <string name="unknown_device">Unknown device</string>
    <string name="select_a_device">Select a device</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="search_device">Search device</string>
    <string name="away_from_home">Away from home</string>
    <string name="away_from_home_state_at_home">At home. Configured action sent to Yadoms</string>
    <string name="away_from_home_state_near">Near at home…</string>
    <string name="away_from_home_state_far">Away From Home function is enable</string>
    <string name="away_from_home_no_location">Location is not available</string>
    <string name="device_to_control_help">The equipment to be activated when you approach the reference location, and deactivated when you move away from it.</string>
</resources>