<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/preferences_away_from_home_function">

        <SwitchPreference
            app:defaultValue="false"
            app:key="away_from_home_enable"
            app:title="@string/away_from_home_enable" />

        <PreferenceCategory
            app:key="reference_location_category"
            app:title="@string/condition">

            <ListPreference
                app:defaultValue="YadomsServerLocation"
                app:entries="@array/reference_location"
                app:entryValues="@array/reference_location_values"
                app:key="reference_location_choice"
                app:title="@string/reference_location"
                app:useSimpleSummaryProvider="false" />

            <SeekBarPreference
                app:key="reference_location_distance"
                app:title="@string/distance"
                app:summary="@string/distance_help"
                app:defaultValue="150"
                app:min="50"
                android:max="500"
                app:showSeekBarValue="true" />
        </PreferenceCategory>

        <PreferenceCategory
            app:key="device_to_control_category"
            app:title="@string/action">

            <com.yadoms.myyadoms.preferences.SelectKeywordPreference
                app:key="away_from_home_device_to_control"
                app:title="@string/device_to_control"
                app:summary="@string/device_to_control_help"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>

    </PreferenceCategory>

</PreferenceScreen>