<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preferences_server_connection">

        <EditTextPreference
            android:inputType="text"
            app:key="server_url"
            app:title="@string/preference_server_url"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="text|number"
            app:defaultValue="8080"
            app:key="server_port"
            app:title="@string/preference_server_port"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="server_use_basic_authentication"
            app:title="@string/preference_server_use_basic_authentication" />

        <EditTextPreference
            android:inputType="text"
            android:key="server_basic_authentication_username"
            android:title="@string/preference_server_basic_authentication_username"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="textPassword"
            android:key="server_basic_authentication_password"
            android:title="@string/preference_server_basic_authentication_password" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="server_use_https"
            app:title="@string/preference_server_use_https" />

        <EditTextPreference
            android:inputType="text|number"
            app:defaultValue="443"
            app:key="server_https_port"
            app:title="@string/preference_server_https_port"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>