<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elegantTextHeight="true"
        android:text="@string/app_name"
        android:textColor="@color/yadomsOfficialBlue"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/yadoms_logo"
        app:srcCompat="@drawable/ic_application_logo" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elegantTextHeight="true" />

    <TextView
        android:id="@+id/yadoms_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="web"
        android:clickable="true"
        android:elegantTextHeight="true"
        android:paddingVertical="48dp"
        android:text="@string/yadoms_url"
        android:textSize="20sp"
        android:textColorLink="@color/yadomsBlueDark" />
</LinearLayout>